spacing fixed dark mode button

--- a/goaltunes/src/app/play-screen/play-screen.component.scss
+++ b/goaltunes/src/app/play-screen/play-screen.component.scss
@@ -68,3 +68,10 @@ h1 {
   margin-top: 10%;
 }
 
+@media only screen and (max-width: 600px) {
+  #oponent {
+    width: calc(100% - 20px);  /* 10px left padding + 10px right padding */
+    margin-top: 10px;
+  }
+}
+
