--- a/goaltunes/src/styles.scss
+++ b/goaltunes/src/styles.scss
@@ -39,3 +39,9 @@ html, body {
 }
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@media only screen and (max-width: 600px) {
+  html, body {
+    overflow: scroll;
+  }
+}
